# open-data-ai-analytics

./: .env.example  .gitignore  CHANGELOG.md  README.md  REPORT.md  compose.yaml  pyproject.toml
.github/workflows/: ci-selfhosted.yml  ci.yml
data/raw/: dtp2024public.csv
data_load/: app.py
data_quality_analysis/: app.py
data_research/: Dockerfile  app.py  requirements.txt
notebooks/: 1.0-eda.ipynb
reports/: clustered_data.csv
reports/figures/: cluster_map.html
src/: data_load.py  data_quality.py  visualization.py
src/reports/figures/: cluster_map.html
visualization/: app.py  requirements.txt
web/: Dockerfile  app.py  requirements.txt
web/templates/: index.html
