[project]
name = "open-data-ai-analytics"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.9"
dependencies = [
    "flask>=3.1.0",
    "folium>=0.20.0",
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
]
